tests/typecheck/should_fail/T6022.hs
{-# LANGUAGE Haskell2010 #-}
module T6022 where

f x = x == head
